localization/v2.4.x/site/zh/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: 本页为您提供与 Milvus 互动的教程列表。
title: 教程概览
---
<h1 id="Tutorials-Overview" class="common-anchor-header">教程概览<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>本页为您提供与 Milvus 互动的教程列表。</p>
<table>
<thead>
<tr><th>教程</th><th>使用案例</th><th>Milvus 相关功能</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/zh/v2.4.x/build-rag-with-milvus.md">使用 Milvus 构建 RAG</a></td><td>RAG</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/how_to_enhance_your_rag.md">高级 RAG</a></td><td>RAG</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/full_text_search_with_milvus.md">使用 Milvus 进行全文检索</a></td><td>快速入门</td><td>全文搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/hybrid_search_with_milvus.md">使用 Milvus 进行混合搜索</a></td><td>混合搜索</td><td>混合搜索、多向量、密集嵌入、稀疏嵌入</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/image_similarity_search.md">使用 Milvus 进行图像搜索</a></td><td>语义搜索</td><td>向量搜索、Dynamic Field</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/multimodal_rag_with_milvus.md">使用 Milvus 的多模态 RAG</a></td><td>RAG</td><td>向量搜索，动态字段</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/multimodal_rag_with_milvus.md">使用多向量进行多模态搜索</a></td><td>语义搜索</td><td>多向量、混合搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/graph_rag_with_milvus.md">使用 Milvus 的图 RAG</a></td><td>RAG</td><td>图搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/contextual_retrieval_with_milvus.md">使用 Milvus 进行上下文检索</a></td><td>快速启动</td><td>向量检索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/hdbscan_clustering_with_milvus.md">利用 Milvus 进行 HDBSCAN 聚类</a></td><td>快速启动</td><td>向量检索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/use_ColPali_with_milvus.md">使用 ColPali 与 Milvus 一起进行多模式检索</a></td><td>快速启动</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/vector_visualization.md">向量可视化</a></td><td>快速启动</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/movie_recommendation_with_milvus.md">使用 Milvus 进行电影推荐</a></td><td>推荐系统</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/funnel_search_with_matryoshka.md">利用 Matryoshka Embeddings 进行漏斗搜索</a></td><td>快速启动</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/question_answering_system.md">问题解答系统</a></td><td>问题解答</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/recommendation_system.md">推荐系统</a></td><td>推荐系统</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/video_similarity_search.md">视频相似性搜索</a></td><td>语义搜索</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/audio_similarity_search.md">音频相似性搜索</a></td><td>语义搜索</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/dna_sequence_classification.md">DNA 分类</a></td><td>分类</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/text_search_engine.md">文本搜索引擎</a></td><td>语义搜索</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/text_image_search.md">文本搜索图像</a></td><td>语义搜索</td><td>向量搜索</td></tr>
<tr><td><a href="/docs/zh/v2.4.x/image_deduplication_system.md">重复数据删除</a></td><td>重复数据删除</td><td>向量搜索</td></tr>
</tbody>
</table>
